test/sprtn/errors/duplicate-unused.sprtn
(let ((x 23)
      (y 'nope)
      (x 5))
  y)
(let ((x 1)
      (x 2)
      (x 3)
      (x 4)
      (x 5))
  23)
(letrec ((x 23)
         (y 'nope)
         (x 5))
  y)
(letrec ((x 1)
         (x 2)
         (x 3)
         (x 4)
         (x 5))
  23)
(lambda (x y x)
  y)
(lambda (x x x x x)
  23)
