test/sprtn/errors/duplicate-unused.sprtn.output
test/sprtn/errors/duplicate-unused.sprtn(1,7): Unused variable `x`, rename to `_` to avoid this error:
  1 [33m|[39m (let ((x 23)
    [33m|[39m        [31m^[39m
  2 [33m|[39m       (y 'nope)
  3 [33m|[39m       (x 5))

test/sprtn/errors/duplicate-unused.sprtn(3,6): Bad `let` bindings syntax, duplicate binding identifier `x`:
  1 [33m|[39m (let ((x 23)
  2 [33m|[39m       (y 'nope)
  3 [33m|[39m       (x 5))
    [33m|[39m       [31m^^^^^[39m
  4 [33m|[39m   y)
  5 [33m|[39m (let ((x 1)

test/sprtn/errors/duplicate-unused.sprtn(3,7): Unused variable `x`, rename to `_` to avoid this error:
  1 [33m|[39m (let ((x 23)
  2 [33m|[39m       (y 'nope)
  3 [33m|[39m       (x 5))
    [33m|[39m        [31m^[39m
  4 [33m|[39m   y)
  5 [33m|[39m (let ((x 1)

test/sprtn/errors/duplicate-unused.sprtn(5,7): Unused variable `x`, rename to `_` to avoid this error:
  3 [33m|[39m       (x 5))
  4 [33m|[39m   y)
  5 [33m|[39m (let ((x 1)
    [33m|[39m        [31m^[39m
  6 [33m|[39m       (x 2)
  7 [33m|[39m       (x 3)

test/sprtn/errors/duplicate-unused.sprtn(6,6): Bad `let` bindings syntax, duplicate binding identifier `x`:
  4 [33m|[39m   y)
  5 [33m|[39m (let ((x 1)
  6 [33m|[39m       (x 2)
    [33m|[39m       [31m^^^^^[39m
  7 [33m|[39m       (x 3)
  8 [33m|[39m       (x 4)

test/sprtn/errors/duplicate-unused.sprtn(6,7): Unused variable `x`, rename to `_` to avoid this error:
  4 [33m|[39m   y)
  5 [33m|[39m (let ((x 1)
  6 [33m|[39m       (x 2)
    [33m|[39m        [31m^[39m
  7 [33m|[39m       (x 3)
  8 [33m|[39m       (x 4)

test/sprtn/errors/duplicate-unused.sprtn(7,6): Bad `let` bindings syntax, duplicate binding identifier `x`:
  5 [33m|[39m (let ((x 1)
  6 [33m|[39m       (x 2)
  7 [33m|[39m       (x 3)
    [33m|[39m       [31m^^^^^[39m
  8 [33m|[39m       (x 4)
  9 [33m|[39m       (x 5))

test/sprtn/errors/duplicate-unused.sprtn(7,7): Unused variable `x`, rename to `_` to avoid this error:
  5 [33m|[39m (let ((x 1)
  6 [33m|[39m       (x 2)
  7 [33m|[39m       (x 3)
    [33m|[39m        [31m^[39m
  8 [33m|[39m       (x 4)
  9 [33m|[39m       (x 5))

test/sprtn/errors/duplicate-unused.sprtn(8,6): Bad `let` bindings syntax, duplicate binding identifier `x`:
  6 [33m|[39m       (x 2)
  7 [33m|[39m       (x 3)
  8 [33m|[39m       (x 4)
    [33m|[39m       [31m^^^^^[39m
  9 [33m|[39m       (x 5))
 10 [33m|[39m   23)

test/sprtn/errors/duplicate-unused.sprtn(8,7): Unused variable `x`, rename to `_` to avoid this error:
  6 [33m|[39m       (x 2)
  7 [33m|[39m       (x 3)
  8 [33m|[39m       (x 4)
    [33m|[39m        [31m^[39m
  9 [33m|[39m       (x 5))
 10 [33m|[39m   23)

test/sprtn/errors/duplicate-unused.sprtn(9,6): Bad `let` bindings syntax, duplicate binding identifier `x`:
  7 [33m|[39m       (x 3)
  8 [33m|[39m       (x 4)
  9 [33m|[39m       (x 5))
    [33m|[39m       [31m^^^^^[39m
 10 [33m|[39m   23)
 11 [33m|[39m (letrec ((x 23)

test/sprtn/errors/duplicate-unused.sprtn(9,7): Unused variable `x`, rename to `_` to avoid this error:
  7 [33m|[39m       (x 3)
  8 [33m|[39m       (x 4)
  9 [33m|[39m       (x 5))
    [33m|[39m        [31m^[39m
 10 [33m|[39m   23)
 11 [33m|[39m (letrec ((x 23)

test/sprtn/errors/duplicate-unused.sprtn(11,10): Unused variable `x`, rename to `_` to avoid this error:
  9 [33m|[39m       (x 5))
 10 [33m|[39m   23)
 11 [33m|[39m (letrec ((x 23)
    [33m|[39m           [31m^[39m
 12 [33m|[39m          (y 'nope)
 13 [33m|[39m          (x 5))

test/sprtn/errors/duplicate-unused.sprtn(13,9): Bad `letrec` bindings syntax, duplicate binding identifier `x`:
 11 [33m|[39m (letrec ((x 23)
 12 [33m|[39m          (y 'nope)
 13 [33m|[39m          (x 5))
    [33m|[39m          [31m^^^^^[39m
 14 [33m|[39m   y)
 15 [33m|[39m (letrec ((x 1)

test/sprtn/errors/duplicate-unused.sprtn(13,10): Unused variable `x`, rename to `_` to avoid this error:
 11 [33m|[39m (letrec ((x 23)
 12 [33m|[39m          (y 'nope)
 13 [33m|[39m          (x 5))
    [33m|[39m           [31m^[39m
 14 [33m|[39m   y)
 15 [33m|[39m (letrec ((x 1)

test/sprtn/errors/duplicate-unused.sprtn(15,10): Unused variable `x`, rename to `_` to avoid this error:
 13 [33m|[39m          (x 5))
 14 [33m|[39m   y)
 15 [33m|[39m (letrec ((x 1)
    [33m|[39m           [31m^[39m
 16 [33m|[39m          (x 2)
 17 [33m|[39m          (x 3)

test/sprtn/errors/duplicate-unused.sprtn(16,9): Bad `letrec` bindings syntax, duplicate binding identifier `x`:
 14 [33m|[39m   y)
 15 [33m|[39m (letrec ((x 1)
 16 [33m|[39m          (x 2)
    [33m|[39m          [31m^^^^^[39m
 17 [33m|[39m          (x 3)
 18 [33m|[39m          (x 4)

test/sprtn/errors/duplicate-unused.sprtn(16,10): Unused variable `x`, rename to `_` to avoid this error:
 14 [33m|[39m   y)
 15 [33m|[39m (letrec ((x 1)
 16 [33m|[39m          (x 2)
    [33m|[39m           [31m^[39m
 17 [33m|[39m          (x 3)
 18 [33m|[39m          (x 4)

test/sprtn/errors/duplicate-unused.sprtn(17,9): Bad `letrec` bindings syntax, duplicate binding identifier `x`:
 15 [33m|[39m (letrec ((x 1)
 16 [33m|[39m          (x 2)
 17 [33m|[39m          (x 3)
    [33m|[39m          [31m^^^^^[39m
 18 [33m|[39m          (x 4)
 19 [33m|[39m          (x 5))

test/sprtn/errors/duplicate-unused.sprtn(17,10): Unused variable `x`, rename to `_` to avoid this error:
 15 [33m|[39m (letrec ((x 1)
 16 [33m|[39m          (x 2)
 17 [33m|[39m          (x 3)
    [33m|[39m           [31m^[39m
 18 [33m|[39m          (x 4)
 19 [33m|[39m          (x 5))

test/sprtn/errors/duplicate-unused.sprtn(18,9): Bad `letrec` bindings syntax, duplicate binding identifier `x`:
 16 [33m|[39m          (x 2)
 17 [33m|[39m          (x 3)
 18 [33m|[39m          (x 4)
    [33m|[39m          [31m^^^^^[39m
 19 [33m|[39m          (x 5))
 20 [33m|[39m   23)

test/sprtn/errors/duplicate-unused.sprtn(18,10): Unused variable `x`, rename to `_` to avoid this error:
 16 [33m|[39m          (x 2)
 17 [33m|[39m          (x 3)
 18 [33m|[39m          (x 4)
    [33m|[39m           [31m^[39m
 19 [33m|[39m          (x 5))
 20 [33m|[39m   23)

test/sprtn/errors/duplicate-unused.sprtn(19,9): Bad `letrec` bindings syntax, duplicate binding identifier `x`:
 17 [33m|[39m          (x 3)
 18 [33m|[39m          (x 4)
 19 [33m|[39m          (x 5))
    [33m|[39m          [31m^^^^^[39m
 20 [33m|[39m   23)
 21 [33m|[39m (lambda (x y x)

test/sprtn/errors/duplicate-unused.sprtn(19,10): Unused variable `x`, rename to `_` to avoid this error:
 17 [33m|[39m          (x 3)
 18 [33m|[39m          (x 4)
 19 [33m|[39m          (x 5))
    [33m|[39m           [31m^[39m
 20 [33m|[39m   23)
 21 [33m|[39m (lambda (x y x)

test/sprtn/errors/duplicate-unused.sprtn(21,9): Unused variable `x`, rename to `_` to avoid this error:
 19 [33m|[39m          (x 5))
 20 [33m|[39m   23)
 21 [33m|[39m (lambda (x y x)
    [33m|[39m          [31m^[39m
 22 [33m|[39m   y)
 23 [33m|[39m (lambda (x x x x x)

test/sprtn/errors/duplicate-unused.sprtn(21,13): Bad `lambda` formal arguments syntax, duplicate formal argument `x`:
 19 [33m|[39m          (x 5))
 20 [33m|[39m   23)
 21 [33m|[39m (lambda (x y x)
    [33m|[39m              [31m^[39m
 22 [33m|[39m   y)
 23 [33m|[39m (lambda (x x x x x)

test/sprtn/errors/duplicate-unused.sprtn(21,13): Unused variable `x`, rename to `_` to avoid this error:
 19 [33m|[39m          (x 5))
 20 [33m|[39m   23)
 21 [33m|[39m (lambda (x y x)
    [33m|[39m              [31m^[39m
 22 [33m|[39m   y)
 23 [33m|[39m (lambda (x x x x x)

test/sprtn/errors/duplicate-unused.sprtn(23,9): Unused variable `x`, rename to `_` to avoid this error:
 21 [33m|[39m (lambda (x y x)
 22 [33m|[39m   y)
 23 [33m|[39m (lambda (x x x x x)
    [33m|[39m          [31m^[39m
 24 [33m|[39m   23)
 25 [33m|[39m 

test/sprtn/errors/duplicate-unused.sprtn(23,11): Bad `lambda` formal arguments syntax, duplicate formal argument `x`:
 21 [33m|[39m (lambda (x y x)
 22 [33m|[39m   y)
 23 [33m|[39m (lambda (x x x x x)
    [33m|[39m            [31m^[39m
 24 [33m|[39m   23)
 25 [33m|[39m 

test/sprtn/errors/duplicate-unused.sprtn(23,11): Unused variable `x`, rename to `_` to avoid this error:
 21 [33m|[39m (lambda (x y x)
 22 [33m|[39m   y)
 23 [33m|[39m (lambda (x x x x x)
    [33m|[39m            [31m^[39m
 24 [33m|[39m   23)
 25 [33m|[39m 

test/sprtn/errors/duplicate-unused.sprtn(23,13): Bad `lambda` formal arguments syntax, duplicate formal argument `x`:
 21 [33m|[39m (lambda (x y x)
 22 [33m|[39m   y)
 23 [33m|[39m (lambda (x x x x x)
    [33m|[39m              [31m^[39m
 24 [33m|[39m   23)
 25 [33m|[39m 

test/sprtn/errors/duplicate-unused.sprtn(23,13): Unused variable `x`, rename to `_` to avoid this error:
 21 [33m|[39m (lambda (x y x)
 22 [33m|[39m   y)
 23 [33m|[39m (lambda (x x x x x)
    [33m|[39m              [31m^[39m
 24 [33m|[39m   23)
 25 [33m|[39m 

test/sprtn/errors/duplicate-unused.sprtn(23,15): Bad `lambda` formal arguments syntax, duplicate formal argument `x`:
 21 [33m|[39m (lambda (x y x)
 22 [33m|[39m   y)
 23 [33m|[39m (lambda (x x x x x)
    [33m|[39m                [31m^[39m
 24 [33m|[39m   23)
 25 [33m|[39m 

test/sprtn/errors/duplicate-unused.sprtn(23,15): Unused variable `x`, rename to `_` to avoid this error:
 21 [33m|[39m (lambda (x y x)
 22 [33m|[39m   y)
 23 [33m|[39m (lambda (x x x x x)
    [33m|[39m                [31m^[39m
 24 [33m|[39m   23)
 25 [33m|[39m 

test/sprtn/errors/duplicate-unused.sprtn(23,17): Bad `lambda` formal arguments syntax, duplicate formal argument `x`:
 21 [33m|[39m (lambda (x y x)
 22 [33m|[39m   y)
 23 [33m|[39m (lambda (x x x x x)
    [33m|[39m                  [31m^[39m
 24 [33m|[39m   23)
 25 [33m|[39m 

test/sprtn/errors/duplicate-unused.sprtn(23,17): Unused variable `x`, rename to `_` to avoid this error:
 21 [33m|[39m (lambda (x y x)
 22 [33m|[39m   y)
 23 [33m|[39m (lambda (x x x x x)
    [33m|[39m                  [31m^[39m
 24 [33m|[39m   23)
 25 [33m|[39m 

Compilation aborted due to 36 errors.
